# nexis-uni-parser

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.md  reference.md  usage.md
nexis_uni_parser/: __init__.py  parser.py
src/nexis_uni_parser/: __init__.py  __main__.py  cli.py  parser.py
tests/: __init__.py  test_main.py  test_nexis_uni_parser.py
