[tool.poetry]
name = "nexis-uni-parser"
version = "0.1.0"
description = ""
authors = ["Garrett Shipley <garrett.shipley7+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Unidecode = "^1.3.4"
pandoc = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
