[tool.poetry]
name = "nexis-uni-parser"
version = "0.1.2"
description = "Parse NexisUni rtf files into a jsonlines file."
readme = "README.md"
homepage = "https://github.com/garth74/nexis-uni-parser"
authors = ["Garrett Shipley <garrett.shipley7+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Unidecode = "^1.3.4"
pandoc = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
